Fixed prediction layout spacing and updated liver dataset;

--- a/static/style.css
+++ b/static/style.css
@@ -400,45 +400,40 @@ input:focus {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     text-align: center;
-    padding: 1rem;
+    padding-top: 0px;
+    padding-bottom: 4px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-top: 0;
 }
 
 .prediction-results svg {
-    width: 3rem;
-    height: 3rem;
-    color: var(--border-color);
-    margin-bottom: 0.7rem;
+     width: 3rem; 
+     height: 3rem; 
+     color: var(--border-color); 
+     margin-bottom: 0.7rem; 
 }
 
 .result-title {
     font-size: 1.125rem;
     font-weight: 600;
-    margin-bottom: 0.2rem;
-}
-
-.prediction-results {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start; 
-    text-align: center;
-    padding-top: 5px;
-    padding-bottom: 2px;
+    margin-top: 15px;
+    margin-bottom: 1px;
 }
 
 .result-list .result-item {
     display: flex;
     align-items: center;
-    padding: 0.3rem 0;  
+    padding: 6px 0;  
     margin: 0;  
     border-bottom: 1px dashed #eee;
     font-size: 1.1rem;
 }
 
 .result-list {
+    margin-top: 1px; 
     list-style: none;
     padding: 0;
     margin: 0;
@@ -450,8 +445,8 @@ input:focus {
 }
 
 .disease-icon {
-    width: 30px;
-    height: 30px;
+    width: 43px;
+    height: 43px;
     margin-right: 15px;
     flex-shrink: 0;
 }
